--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.15.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "geist": "^1.0.0",
+    "jsdom": "^23.0.1",
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.3.3",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
