--- a/package.json
+++ b/package.json
@@ -1,51 +1,19 @@
 {
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
-    "@tanstack/react-query": "^5.15.0",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.6.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
-    "geist": "^1.0.0",
-    "jsdom": "^23.0.1",
-    "lucide-react": "^0.302.0",
-    "next": "latest",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.49.2",
-    "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.3",
-    "zod": "^3.22.4"
+    "nuxt": "^3.12.3",
+    "vue": "latest"
   },
   "devDependencies": {
-    "@hookform/resolvers": "^3.3.3",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13",
-    "supabase": "^1.127.3"
+    "supabase": "^1.183.5"
   }
 }
