--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/supabase": "^1.3.5",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.12.3",
     "vue": "latest"
-  },
-  "devDependencies": {
-    "supabase": "^1.183.5"
   }
 }
