--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "@nuxtjs/supabase": "^1.3.5",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "cheerio": "^1.0.0-rc.12",
+    "jsdom": "^24.1.0",
     "nuxt": "^3.12.3",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@types/jsdom": "^21.1.7",
+    "@types/node-fetch": "^2.6.11"
   }
 }
